--- a/login.html
+++ b/login.html
@@ -3,6 +3,7 @@
 <TITLE>Login Form</TITLE> 
 </HEAD> 
 <BODY> 
+	<h2>Student Enrollment Management System</h2>
 <FORM name="login" method="POST" action="login_action.php"> 
 User ID: <INPUT type="text" name="clientid" size="8" maxlength="8"> <br />
 Password: <input type="text" name="password" size="12" > 
