add new user working

--- a/login.html
+++ b/login.html
@@ -3,10 +3,10 @@
 <TITLE>Login Form</TITLE> 
 </HEAD> 
 <BODY> 
-	<h2>Student Enrollment Management System</h2>
+	<h2>Student Management System</h2>
 <FORM name="login" method="POST" action="login_action.php"> 
 User ID: <INPUT type="text" name="clientid" size="8" maxlength="8"> <br />
-Password: <input type="text" name="password" size="12" > 
+Password: <input type="password" name="password" size="12" > 
 <INPUT type="submit" name="submit" value="Login"> 
 </FORM> 
 </BODY> 
